--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
             <button id="start">START GAME</button>
             <button id="new-card">NEW CARD</button>
             <p id="player-el"></p>
+            <!-- direct link -->
+            <a href="https://www.profitablegatetocontent.com/jr3z0wsf?key=0bf7fae0e3f3205da045d08b4b0169bd"></a>
         </div>
     
 
