--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
         src='//pl17855085.profitablegatetocontent.com/9f/71/95/9f71956e41690dea9797f36b40e41303.js'></script>
    
 </head>
-<body>
-    
+    <!-- social bar -->
+<script type='text/javascript' src='//systemhostess.com/e4/19/a2/e419a26f4db0ed883c79618050035a71.js'></script>
+<body> 
         <div class="container">
             <h1>Black Jack</h1>
             <p id="message-el">Wanna play a round?</p>
