--- a/index.html
+++ b/index.html
@@ -45,5 +45,15 @@
         </script>
     
     <script src="index.js"></script>
+    <script type="text/javascript">
+	atOptions = {
+		'key' : 'e911844eeaf527e3518bd6cb745d8744',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.profitabledisplaynetwork.com/e911844eeaf527e3518bd6cb745d8744/invoke.js"></scr' + 'ipt>');
+</script>
 </body>
 </html>
